# PaperTA

./: .env.example  .gitignore  LOCAL_DEV_SETUP.md  Makefile  PaperTA_System_Design_v0.1.md  PaperTA_System_Design_v0.2.md  PaperTA_System_Design_v0.3.md  README.md  RULES_OF_ENGAGEMENT.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  phase-gate.yml
.streamlit/: config.toml
configs/reviews/: external_review_tools.yaml
docs/: DEFERRALS.md  EXTERNAL_REVIEW_AUTOMATION.md  GIT.md  INTERNAL_REVIEW_AGENTS.md  JOURNAL.md  ROADMAP_SUMMARY.md  RULES_QUICKSTART.md
docs/adr/: ADR-001-phase1-ingestion-grounded-summary.md  ADR-002-phase2-teach-mode-core.md  ADR-003-phase3-reviewer-mode-verification.md  ADR-004-phase4-multi-paper-intelligence.md
docs/attestations/: TEMPLATE.md
docs/checklists/: PHASE1_ACCEPTANCE_CHECKLIST.yaml  PHASE2_ACCEPTANCE_CHECKLIST.yaml  PHASE3_ACCEPTANCE_CHECKLIST.yaml  PHASE4_ACCEPTANCE_CHECKLIST.yaml
docs/contracts/: PHASE1_RUNTIME_CONTRACT.md  PHASE2_RUNTIME_CONTRACT.md  PHASE3_RUNTIME_CONTRACT.md  PHASE4_RUNTIME_CONTRACT.md
docs/templates/: ADR_TEMPLATE.md  PHASE_ACCEPTANCE_CHECKLIST_TEMPLATE.yaml  PHASE_RUNTIME_CONTRACT_TEMPLATE.md
scripts/: check_docstrings.py  generate_phase_report.py  phase_gate.py  run_external_reviews.py  verify_checklist.py  verify_external_reviews.py  verify_internal_reviews.py
src/paperta/: __init__.py  contracts.py  ingestion.py  llm_providers.py  multi_paper.py  multi_paper_contracts.py  pdf_utils.py  pipeline.py  retrieval.py  reviewer.py  reviewer_contracts.py  summary.py  teach.py  (+2 more)
(+87 files in other folders)
