[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperta"
version = "0.1.0"
description = "PaperTA governance and tooling"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "streamlit>=1.38",
  "pypdf>=5.0",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
  "anthropic>=0.30",
  "python-dotenv>=1.0",
]
dev = [
  "pytest>=8.0",
]
